@@ -24,7 +24,7 @@
 const int max_types = 15;
 
 typedef void (*Move_shape_handler_fun)(int shape, int frame, int x, int y,
-							int prevx, int prevy);
+					int prevx, int prevy, bool show);
 typedef void (*Drop_shape_handler_fun)(int shape, int frame, int x, int y, void *data);
 typedef void (*Drop_chunk_handler_fun)(int chunk, int x, int y, void *data);
 
